Fix race condition in ArcAuthService

Please first check the attached bug for context.

The fix is to listen on AccountTrackerService and not AccountManager
for account removals.

We cannot listen on AccountTrackerService for account updates because
AccountTrackerService does not notify its observers when an account's
LST changes.

Bug: 904978
Test: browser_tests --gtest_filter="ArcAuthServiceTest.AccountRemovalsArePropagated"
Change-Id: I75aeda8dd280734e58e509f5a34a4b1e27b09498
Reviewed-on: https://chromium-review.googlesource.com/c/1334368
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Kush Sinha <sinhak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608853}
Former-commit-id: eaf5778e5ca3aea9b5724e6d08d43780e2731482